# ga-ad-performance-analysis-agent

./: .gitignore  Dockerfile  EXECUTION_GUIDE.md  README.md  VENV_EXECUTION.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements.txt ⁠
docs/: Ad Performance Analysis Agent  GA Sessions Data
src/: agent_app.py  config.py  constants.py
src/ga_ad_agent/: agent.py  agent_app.py  config.py  ga_mcp_server.py
